# y-data-house

./: .gemini.toml  .gemini_context.md  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  channels.txt  info.md  pyproject.toml
.cursor/rules/: y-data-house.mdc
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  main.json
app/src-tauri/src/: main.rs
app/src/components/: AIAnswerComponent.tsx  AIComponents.css  AIQuestionTab.tsx  AdvancedSettingsPanel.tsx  ChannelSelector.tsx  PromptManager.tsx
app/src/types/: settings.ts
backup/: download_channel.py  info.md  info_2.md
src/ydh/: __init__.py  __main__.py  cli.py  config.py  converter.py  downloader.py  downloader_broken.py  flow.py  transcript.py  vault_writer.py
vault/: 🗼 도쿄부동산.md
vault/00_templates/: ai-assistant-setup.md  dataview.md
vault/10_videos/: .gitkeep
vault/90_indices/: README_ZERO_SHOT.md  answer_pipeline.py  auto_prompt.py  channel_analyzer.py  embed.py  embed_gemini.py  get_video_info.py  integrity_check.py  list_channels.py  local_gemini.py  prompt_manager.py  rag.py  rag_controller.py  rag_gemini.py  schemas.py  search_gemini.py  search_pipeline.py  semantic_cache.py  session_manager.py  test_zero_shot.py  zero_shot_prompt_generator.py
vault/90_indices/prompts/竹花貴騎_Takaki_Takehana/: prompt_v1.json
vault/90_indices/prompts/일본_부동산_투자/: prompt_v1.json
vault/downloads/: takaki_takehana_downloaded.txt  도쿄부동산_downloaded.txt
