[package]
name = "ydh-desktop"
version = "0.1.0"
description = "Y-Data-House Desktop Application"
authors = ["Y-Data-House Team"]
license = "MIT"
repository = ""
edition = "2021"

[[bin]]
name = "ydh-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
